
3.07  2012-07-12
  - Improved documentation.
  - Improved tests.
  - Fixed small bug in Mojolicious::Plugin::EPRenderer that prevented code to
    be added to all templates.

3.06  2012-07-11
  - Added tls_verify option to Mojo::IOLoop::Server->listen. (scottw)
  - Added verify parameter to Mojo::Server::Daemon->listen. (scottw)
  - Improved documentation.
  - Improved tests.
  - Fixed small bug in Mojo::UserAgent that prevented port reuse.

3.05  2012-07-08
  - Reduced default graceful_timeout from 30 to 20 seconds in
    Mojo::Server::Hypnotoad.
  - Improved documentation.
  - Improved tests.
  - Fixed small initialization bug in Mojo::IOLoop::Stream.

3.04  2012-07-07
  - Improved Mojo::IOLoop performance by reducing stream timeout precision
    from 0.025 to 0.5 seconds.

3.03  2012-07-06
  - Improved load balancing between Hypnotoad worker processes.
  - Improved Hypnotoad log messages.
  - Improved documentation.
  - Improved tests.
  - Fixed default format handling bug in render_exception and
    render_not_found.
  - Fixed small namespace detection bug in Mojo::DOM.
  - Fixed small session reset bug in Test::Mojo.

3.02  2012-07-03
  - Added pluck and uniq methods to Mojo::Collection.
  - Added regular expression support to first and grep methods in
    Mojo::Collection.
  - Improved documentation.
  - Improved tests.
  - Fixed JSON Pointer escaping.
  - Fixed small text and attribute extraction bugs in Mojo::DOM.
  - Fixed small inconsistency between routes and static dispatchers.

3.01  2012-07-01
  - Improved CSS of built-in templates.
  - Improved documentation. (diegok, sri)

3.0  2012-06-25
  - Code name "Rainbow", this is a major release.
  - Removed Mojolicious::Plugin::I18N so it can be maintained as a separate
    distribution.
  - Removed app_class attribute from Mojo::Server.
  - Removed qp_decode and qp_encode methods from Mojo::ByteStream.
  - Removed qp_decode and qp_encode functions from Mojo::Util.