@@ -1,4 +1,4 @@
-. my $foo = 23;
+. my $bar = $foo;
 {
-  "test": *** $foo **
+  "test": *** $bar **
 }
